# halo2-scaffold

./: .gitignore  Cargo.toml  README.md
data/: cairo_fibonacci.in  cairo_vm_test_log  cario_fibonacci.in  cario_vm_test_log  fixed_len_keccak-1.in  fixed_len_keccak.in  halo2_lib.0.in  halo2_lib.in  int_div_underconstrained.in  merkletree.in  merkletree_prove.in  merkletree_prove_2_15.in  merkletree_verify.in  merkletree_verify_2_15.in  merkletree_verify_2_16.in  merkletree_verify_2_17.in  merkletree_verify_2_20.in  poly_reduce.in  poseidon.in  range.in  storage_proof.in  var_len_keccak.1.in  var_len_keccak.in
examples/: advanced.rs  barrel_shift.rs  builder.rs  cairo.rs  cario.rs  fixed_len_keccak.rs  halo2_lib.rs  int_div.rs  int_div_underconstrained.rs  merkletree.rs  merkletree_prove.rs  merkletree_verify.rs  poly_reduce.rs  polyadd.rs  polymul.rs  poseidon.rs  range.rs  standard_plonk.rs  storage_proof.rs  var_len_keccak.rs  variable_subarray_shift_v2.rs
src/: lib.rs  main.rs  my_circuit.rs  scaffold.rs
src/circuits/: is_zero.rs  mod.rs  or.rs
src/scaffold/: cmd.rs  mod.rs
src/vanilla_circuits/: standard_plonk.rs
